# runtime-gateway

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-foundation-link.yml  runtime-gateway-ci.yml
governance/baselines/: approval-policy.yaml  code-shape-fail-baseline.json  contract-authority-slot-binding.yaml
governance/registry/: governance-doc-index.yaml
scripts/: check_boundary_imports.py  check_code_shape.py  verify_durable_sqlite_minimal.py  verify_persistence_lane.sh
src/runtime_gateway/: __init__.py  app.py  capability_dispatch.py  code_terms.py  contracts_catalog_runtime.py  contracts_py_runtime.py  error_budget_policy.py  event_transport_adapter.py  event_transport_backend.py  execution_ingress_contract.py  executor_profiles.py  identity_adapter.py  persistence_paths.py  (+14 more)
tests/: test_app_integration.py  test_audit_emitter.py  test_auth_exchange.py  test_capability_routes.py  test_code_terms.py  test_contract_fixture_sync.py  test_contract_validation.py  test_e2e_run_flow.py  test_event_bus_websocket.py  test_event_envelope_validation.py  test_event_transport_adapter.py  test_event_transport_backend.py  test_events_durable.py  test_executor_profiles.py  test_gateway_execution_adapter_integration.py  test_identity_adapter.py  test_naming_examples.py  test_persistence_paths.py  test_run_approval.py  test_run_control.py  test_run_dispatch_metadata.py  test_run_lease.py  test_run_scheduler.py  test_run_status.py  test_run_status_terms.py  test_run_worker.py  test_runtime_execution_client.py  test_upstream_error_terms.py
(+33 files in other folders)
