[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waoooolab-runtime-gateway"
version = "0.1.0"
description = "Runtime gateway service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "jsonschema>=4.22.0",
  "uvicorn>=0.29.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
